--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <p>Hello!</p>
-    </body>
+
+<head>
+    <title>WFZ的个人网站</title>
+    <meta charset="UTF-8" />
+    <link href="./MainStyle.css" rel="stylesheet" type="text/css" />
+    <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon"/>
+</head>
+
+<body>
+
+</body>
+
 </html>
