--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <title>WFZ的个人网站</title>
     <meta charset="UTF-8" />
-    <link href="./MainStyle.css" rel="stylesheet" type="text/css" />
+    <link href="./css/MainStyle.css" rel="stylesheet" type="text/css" />
     <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon"/>
 </head>
 
-<body>
+<body bgcolor="#000">
+    <div id="Header">
+        <span>1</span>
+        <span>2</span>
+    </div>
+    <h1 align = "center">这里是WFZ的个人网站!</h1>
     <p>你好！<p>
 </body>
 
