--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--
+    fuck，你为什么要看！
+-->
 <!DOCTYPE html>
 <html>
 
@@ -8,13 +11,19 @@
     <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon"/>
 </head>
 
-<body bgcolor="#000">
+<body bgcolor="#101f1f">
+    <a name="Top"></a>
     <div id="Header">
-        <span>1</span>
-        <span>2</span>
+        <a href="./index.html#Top">首页</a>
+        <a href="https://space.bilibili.com/1329177167">B站</a>
     </div>
     <h1 align = "center">这里是WFZ的个人网站!</h1>
-    <p>你好！<p>
+    <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
+    <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
+    <ph>别想抄我网站代码！</ph>
 </body>
+<footer id="Footer">
+    &copy;Made By WFZ
+</footer>
 
 </html>
