--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WFZ的个人网站</title>
     <meta charset="UTF-8" />
     <link href="./css/MainStyle.css" rel="stylesheet" type="text/css" />
-    <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body bgcolor="#101f1f">
@@ -17,10 +17,12 @@
         <a href="./index.html#Top">首页</a>
         <a href="https://space.bilibili.com/1329177167">B站</a>
     </div>
-    <h1 align = "center">这里是WFZ的个人网站!</h1>
-    <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
-    <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
-    <ph>别想抄我网站代码！</ph>
+    <div id="MainBar">
+        <h1 align="center">这里是WFZ的个人网站!</h1>
+        <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
+        <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
+        <ph>别想抄我网站代码！</ph>
+    </div>
 </body>
 <footer id="Footer">
     &copy;Made By WFZ
