--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
         <a href="./index.html#Top">首页</a>
         <a href="https://space.bilibili.com/1329177167">B站</a>
     </div>
+    <div id="SideBar">
+        <a href="#Top">顶部</a>
+        <a href="#Bottom">底部</a>
+    </div>
     <div id="MainBar">
         <h1 align="center">这里是WFZ的个人网站!</h1>
         <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
         <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
         <ph>别想抄我网站代码！</ph>
+        <img src="./img/head.jpg"class="img"></img>
     </div>
 </body>
 <footer id="Footer">
     &copy;Made By WFZ
+    <a name="Bottom"></a>
 </footer>
 
 </html>
