--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>WFZ的个人网站</title>
+    <title>WFZ的博客</title>
     <meta charset="UTF-8" />
     <link href="./css/MainStyle.css" rel="stylesheet" type="text/css" />
     <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon" />
@@ -16,6 +16,7 @@
     <div id="Header">
         <a href="./index.html#Top">首页</a>
         <a href="https://space.bilibili.com/1329177167">B站</a>
+        <a href="./pages/CYF.html">CYF</a>
     </div>
     <div id="SideBar">
         <a href="#Top">顶部</a>
@@ -23,10 +24,10 @@
     </div>
     <div id="MainBar">
         <h1 align="center">这里是WFZ的个人网站!</h1>
-        <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
+        <ph1>你好！欢迎来到WFZ的个人博客！</ph1>
         <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
-        <ph>别想抄我网站代码！</ph>
-        <img src="./img/head.jpg"class="img"></img>
+        <ph></ph>
+        
     </div>
 </body>
 <footer id="Footer">
