--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>WFZ的博客</title>
+    <title>WFZ的网站</title>
     <meta charset="UTF-8" />
     <link href="./css/MainStyle.css" rel="stylesheet" type="text/css" />
     <link href="./img/icon.png" rel="shortcut icon" type="image/x-icon" />
@@ -24,7 +24,7 @@
     </div>
     <div id="MainBar">
         <h1 align="center">这里是WFZ的个人网站!</h1>
-        <ph1>你好！欢迎来到WFZ的个人博客！</ph1>
+        <ph1>你好！欢迎来到WFZ的个人网站！</ph1>
         <ph>WFZ是一个中国人，致力于UT同人游戏的开发。</ph>
         <ph></ph>
         
